Clean up commands, prep for autocompletion

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = "addressbook.jar"
+    archiveName = "ptman.jar"
 
     destinationDir = file("${buildDir}/jar/")
 }
